fixed auth swagger
