# storage/api-docs/api-docs.json
@@ -13,6 +13,9 @@
                 "summary": "Display current user.",
                 "operationId": "9c56ef837e374a061a0505742a2a277d",
                 "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "200": {
                         "description": "Display current user.",
                         "content": {
@@ -37,7 +40,7 @@
                 },
                 "security": [
                     {
-                        "BearerAuth": []
+                        "Authorization": []
                     }
                 ]
             }
@@ -79,7 +82,7 @@
                                         "data": {
                                             "type": "object",
                                             "example": {
-                                                "access_token": "2|NdjBByPTcx9DzQgSN8x7dq3DUtjDLmEbwNQqvPGEfdb4e5db"
+                                                "access_token": "Bearer 2|NdjBByPTcx9DzQgSN8x7dq3DUtjDLmEbwNQqvPGEfdb4e5db"
                                             }
                                         }
                                     },
@@ -99,6 +102,9 @@
                 "summary": "logout.",
                 "operationId": "618f033d5ecfff68b1d0880a5f399d7b",
                 "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "200": {
                         "description": "logout.",
                         "content": {
@@ -118,9 +124,19 @@
                 },
                 "security": [
                     {
-                        "BearerAuth": []
+                        "Authorization": []
                     }
                 ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "Authorization": {
+                "type": "apiKey",
+                "description": "Api Key for authorization.",
+                "name": "Authorization",
+                "in": "header"
             }
         },
         "/api/register": {
@@ -155,7 +171,7 @@
                         "description": "password",
                         "schema": {
                             "type": "string",
-                            "example": "password"
+                            "example": "Tomas1989"
                         }
                     }
                 ],
